note:
	- Playback will fail if PCM is used and target device requires MP3 conversion (eg it is a bridge) 
	because the lame conversion rule expects a wav file which means a header. 
	- BEWARE OF VERSION NUMBER FOR PERL LIBS

0.101.1
 - flac level 0 in UI was not handled
 
0.101.0
 - improve settings UI by adding list of flac/mp3 options
 
0.100.0
 - add mp3 encoding
 - add flac compression level

0.92.1
 - authorize non-encrypted sessions
 - coverart can be jpeg or png
 
0.92.0
 - save & Restore LMS volume between AirPlay sessions
 
0.91.4
 - add all lib in a "elib" directory and make sure its path is at the end of @INC
 - add x86 and x64 versions for Perl 5.14
 - use helper PID in URL
 
0.91.3
 - use @INC instead of renaming directory
 
0.91.2
 - Crypt lib only used if system version non available
	
0.91.1
 - rename i686, x86_64 and aarch64 auto directories (add gnu-)
 - add x86 and x86_64 shared lib 5.16 version (ancient!)
 
0.91.0
 - update OpenSSL	
 - added various Perl & CPU
 - 32 bits comparaison correction

0.90.6
 - aarch64 version
 
0.90.5
 - if previous HTTP socket was not closed, it could be used to send new track, causing miss of flac header (backport from AirConnect, no mandatory here)
 - kd_dump was writing in a NULL string when no header was received
 
0.90.1
 - add ppc version
 
0.90.0
 - players can be added/remove dynamically
 - add option to republish all & kill all mDNS helper
 - use TCP_NODELAY in HTTP socket
 
0.85.1
 - correct one potentil issue with empty header on HTTP response
 
0.85.0
 - restore existing playlist when exiting
 
0.84.0
 - mDNS sender should set TTL to 120s for SRV, PTR, and A (not TXT)
 - use closesocket under Windows, not close!
 
0.83.2
 - Perl 5.10.0 builds do not need 64int
 - update tinymdnssvc
 
0.83.0
 - optimize RTP frame recovery in case of network blackouts

0.82.5
 - and ... put the lib at the correct place for 5.10
 
0.82.4
 - added libs for Linux x86 5.10 and Solaris x86 5.24
 
0.82.3
 - fix "settings" link
 